# Larus

./: 3benches.csv  AUTHORS  CLConjecture.cpp  CLConjecture.h  CLprover  CLprover.pro  Constraint.cpp  EncodedProof.h  Makefile  README.md  common.cpp  common.h  data-clprover-variants.csv  data.csv  data2.csv  generate_starexec_archive.sh  hammering.cpp  hammering.h  import.cpp  larus  larus.pro  main.cpp  prove.urs  run_benches.sh  run_ci.sh  run_clprover.sh  run_speed_test.sh  starexec_build  starexec_description.txt  starexec_run_default  tasks_and_ideas.txt  treat_benches.py
Axioms/: BezemAxioms.cpp  EuclidElements.cpp  EuclidStatementsDepends.cpp  TarskiAxioms.cpp
CLProof/: CLProof.cpp  CLProof.h
CLTheory/: Formula.cpp  Formula.h  Theory.cpp  Theory.h
Figures/: tab_results.tex
GeometricReasoningToolkit/: ADGLib_signature.h  CMakeLists.txt  CartesianCalculations.cpp  CartesianCalculations.h  ConstructionPlan.cpp  ConstructionPlan.h  ConstructionRules.cpp  ConstructionRules.h  Declarative2Procedural.cpp  Declarative2Procedural.h  Diagram.cpp  Diagram.h  GeometricConfiguration.cpp  GeometricConfiguration.h  LemmaGenerator.cpp  LemmaGenerator.h  Makefile  SemanticGuidedProving.cpp  TPTPSupport.cpp  TPTPSupport.h  Utils.cpp  Utils.h  construction_rules.p  deduction_rules.p  definitions.p  main.cpp  predicates.gcl
ProofExport/: ProofExport.h  ProofExport2Coq.cpp  ProofExport2Coq.h  ProofExport2GCLC.cpp  ProofExport2GCLC.h  ProofExport2GCLC_predicates.cpp  ProofExport2GCLC_predicates.h  ProofExport2Isabelle.cpp  ProofExport2Isabelle.h  ProofExport2LaTeX.cpp  ProofExport2LaTeX.h  ProofExport2LambdaPi.cpp  ProofExport2LambdaPi.h  ProofExport2Mizar.cpp  ProofExport2Mizar.h  ProofExport2Text.cpp  ProofExport2Text.h
ProvingEngine/: FactsDatabase.h  ProvingEngine.h  SMTOut.cpp  SMTOut.h
SemanticGuidance/: ADGLib_signature.h  CMakeLists.txt  Cartesian.cpp  Cartesian.h  CartesianCalculations.cpp  ConstructionRules.cpp  ConstructionRules.h  Diagram.cpp  Diagram.h  GeometricConfiguration.cpp  GeometricConfiguration.h  LemmaGenerator.cpp  LemmaGenerator.h  Makefile  TPTPSupport.cpp  TPTPSupport.h  main.cpp  rules.txt  semanticGuidance.cpp  semanticGuidedProving.h
StarExec/: create_archive.sh  starexec_description.txt  starexec_run_smt  starexec_run_stl
benches/: data-clprover-variants.csv  data.csv  run_benches.sh  treat_benches.py
benchmarks/: README.md  data-clprover-variants.csv  data_star_exec.csv  data_star_exec_crafted_hard.csv  data_star_exec_euclid_7provers.csv  data_star_exec_euclid_9provers.csv  data_star_exec_geo_h.csv  data_star_exec_geo_selection.csv  data_star_exec_larus_variants.csv  run_benches.sh  treat_benches.py  treat_results_from_starexec.py
binaries/: larus  ursa
continuous-integration/: run_ci.sh  run_cif.sh
fol2clf/: fol2clf  fol2clf.pl
proofs/: _CoqProject  _CoqProject.in  argoclp.sty  euclidean_axioms.v  general_tactics.v
tptp-problems/: lemma_30helper.tptp  lemma_3_5b.tptp  lemma_3_6a.tptp  lemma_3_6b.tptp  lemma_3_7a.tptp  lemma_3_7b.tptp  lemma_8_2.tptp  lemma_8_3.tptp  lemma_8_7.tptp  lemma_9_5a.tptp  lemma_ABCequalsCBA.tptp  lemma_EFreflexive.tptp  lemma_ETreflexive.tptp  lemma_NCdistinct.tptp  lemma_PGrectangle.tptp  lemma_PGsymmetric.tptp  lemma_Playfair.tptp  lemma_Playfairhelper.tptp  lemma_RTsymmetric.tptp  lemma_TCreflexive.tptp  lemma_TGflip.tptp  lemma_TGsymmetric.tptp  lemma_TTflip.tptp  lemma_TTtransitive.tptp  lemma_angleaddition.tptp  lemma_angleorderrespectscongruence.tptp  lemma_angletrichotomy2.tptp  lemma_betweennotequal.tptp  lemma_collinear1.tptp  lemma_collinear4.tptp  lemma_collinearparallel.tptp  lemma_congruenceflip.tptp  lemma_congruenceflip1.tptp  lemma_congruenceflip2.tptp  lemma_congruenceflip3.tptp  lemma_congruencesymmetric.tptp  lemma_congruencetransitive.tptp  lemma_crossbar2.tptp  (+65 more)
(+12080 files in other folders)
